--- a/.github/workflows/azure-plan-and-apply.yaml
+++ b/.github/workflows/azure-plan-and-apply.yaml
@@ -14,7 +14,7 @@ on:
         required: true
         type: string
       AZURE_AD_TENANT_ID:
-        requried: true
+        required: true
         type: string
 
 jobs:
