fix: add new names

--- a/.github/workflows/azure-plan-and-apply.yaml
+++ b/.github/workflows/azure-plan-and-apply.yaml
@@ -18,8 +18,8 @@ on:
         type: string
 
 jobs:
-  terraform:
-    name: 'Terraform'
+  plan-and-apply:
+    name: 'Terraform Plan And Apply'
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
