--- a/.github/workflows/azure-plan-and-apply.yaml
+++ b/.github/workflows/azure-plan-and-apply.yaml
@@ -31,7 +31,11 @@ jobs:
 
       - name: Terraform Init
         id: init
-        run: terraform init
+        run: 'terraform init \ \n 
+          -backend-config="resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}" \n
+          -backend-config="storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}" \n
+          -backend-config="container_name=${{ secrets.AZURE_BACKEND_CONTAINER_NAME }}" \n
+          -backend-config="key=${{ secrets.AZURE_BACKEND_KEY }}" \n'
       
       - name: Terraform Validate
         id: validate
