refactor: remove reduntant name

--- a/.github/workflows/azure-plan-and-apply.yaml
+++ b/.github/workflows/azure-plan-and-apply.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   plan-and-apply:
-    name: 'Terraform Plan And Apply'
+    name: 'Plan And Apply'
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
