--- a/.github/workflows/azure-plan-and-apply.yaml
+++ b/.github/workflows/azure-plan-and-apply.yaml
@@ -2,6 +2,9 @@ name: 'IAC Azure Terraform Plan And Apply'
 
 on:
   workflow_call:
+    inputs: 
+      required: false
+      terraform_args: string
 
 jobs:
   plan-and-apply:
@@ -23,7 +26,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+        uses: hashicorp/setup-terraform@v2
 
       - name: Terraform Format
         id: fmt
@@ -39,6 +42,8 @@ jobs:
 
       - name: Terraform Init
         id: init
+        env:
+          ${{ inputs.terraform_args }}
         run: "terraform init \\\n 
           -backend-config=\"resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}\" \\\n
           -backend-config=\"storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}\" \\\n
