--- a/.github/workflows/azure-plan.yaml
+++ b/.github/workflows/azure-plan.yaml
@@ -6,6 +6,10 @@ on:
       terraform_args:
         required: false
         type: string
+    secrets:
+      KV_NAME:
+        required: false
+        type: string
 
 jobs:
   plan:
