fix: store artifact path

--- a/.github/workflows/azure-plan-and-apply.yaml
+++ b/.github/workflows/azure-plan-and-apply.yaml
@@ -64,6 +64,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: ${{ github.sha }}.tfplan
+          path: ${{ github.sha }}.tfplan
 
   apply:
     needs: 
