feat: add working directory input

--- a/.github/workflows/azure-plan-and-apply.yaml
+++ b/.github/workflows/azure-plan-and-apply.yaml
@@ -3,6 +3,10 @@ name: 'IAC Azure Terraform Plan And Apply'
 on:
   workflow_call:
     inputs:
+      working_directory:
+        required: false
+        type: string
+        default: ""
       terraform_args:
         required: false
         type: string
@@ -58,6 +62,7 @@ jobs:
 
       - name: Terraform Plan
         id: plan
+        working-directory: ${{ inputs.working_directory }}
         run: terraform plan ${{ inputs.terraform_args }} -input=false -out=${{ github.sha }}.tfplan
       
       - name: Store Terraform plan
