feat: add option for custom key

--- a/.github/workflows/azure-plan-and-destroy.yaml
+++ b/.github/workflows/azure-plan-and-destroy.yaml
@@ -46,13 +46,25 @@ jobs:
           tenant-id: ${{ secrets.AZURE_AD_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Terraform Init
+      - name: Terraform Init with default key
+        if: ${{ inputs.default_storage_key }}
         id: init
         run: "terraform init ${{ inputs.terraform_args }} \\\n 
           -backend-config=\"resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}\" \\\n
           -backend-config=\"storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}\" \\\n
           -backend-config=\"container_name=${{ secrets.AZURE_BACKEND_CONTAINER_NAME }}\" \\\n
           -backend-config=\"key=${{ secrets.AZURE_BACKEND_KEY }}\"  \\\n
+          -backend-config=\"use_oidc=true\"  \\\n
+          -backend-config=\"subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}\"  \\\n
+          -backend-config=\"tenant_id=${{ secrets.AZURE_AD_TENANT_ID }}\""
+
+      - name: Terraform Init with custom key
+        if: ${{ !inputs.default_storage_key }}
+        id: init
+        run: "terraform init ${{ inputs.terraform_args }} \\\n 
+          -backend-config=\"resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}\" \\\n
+          -backend-config=\"storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}\" \\\n
+          -backend-config=\"container_name=${{ secrets.AZURE_BACKEND_CONTAINER_NAME }}\" \\\n
           -backend-config=\"use_oidc=true\"  \\\n
           -backend-config=\"subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}\"  \\\n
           -backend-config=\"tenant_id=${{ secrets.AZURE_AD_TENANT_ID }}\""
@@ -104,13 +116,25 @@ jobs:
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
 
-      - name: Terraform Init
+      - name: Terraform Init with default key
+        if: ${{ inputs.default_storage_key }}
         id: init
         run: "terraform init ${{ inputs.terraform_args }} \\\n 
           -backend-config=\"resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}\" \\\n
           -backend-config=\"storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}\" \\\n
           -backend-config=\"container_name=${{ secrets.AZURE_BACKEND_CONTAINER_NAME }}\" \\\n
           -backend-config=\"key=${{ secrets.AZURE_BACKEND_KEY }}\"  \\\n
+          -backend-config=\"use_oidc=true\"  \\\n
+          -backend-config=\"subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}\"  \\\n
+          -backend-config=\"tenant_id=${{ secrets.AZURE_AD_TENANT_ID }}\""
+
+      - name: Terraform Init with custom key
+        if: ${{ !inputs.default_storage_key }}
+        id: init
+        run: "terraform init ${{ inputs.terraform_args }} \\\n 
+          -backend-config=\"resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}\" \\\n
+          -backend-config=\"storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}\" \\\n
+          -backend-config=\"container_name=${{ secrets.AZURE_BACKEND_CONTAINER_NAME }}\" \\\n
           -backend-config=\"use_oidc=true\"  \\\n
           -backend-config=\"subscription_id=${{ secrets.AZURE_SUBSCRIPTION_ID }}\"  \\\n
           -backend-config=\"tenant_id=${{ secrets.AZURE_AD_TENANT_ID }}\""
