--- a/.github/workflows/azure-plan-and-destroy.yaml
+++ b/.github/workflows/azure-plan-and-destroy.yaml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Terraform Init with default key
         if: ${{ inputs.default_storage_key }}
-        id: init
+        id: initDefaultKey
         run: "terraform init ${{ inputs.terraform_args }} \\\n 
           -backend-config=\"resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}\" \\\n
           -backend-config=\"storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}\" \\\n
@@ -60,7 +60,7 @@ jobs:
 
       - name: Terraform Init with custom key
         if: ${{ !inputs.default_storage_key }}
-        id: init
+        id: initCustomKey
         run: "terraform init ${{ inputs.terraform_args }} \\\n 
           -backend-config=\"resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}\" \\\n
           -backend-config=\"storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}\" \\\n
@@ -118,7 +118,7 @@ jobs:
 
       - name: Terraform Init with default key
         if: ${{ inputs.default_storage_key }}
-        id: init
+        id: initDefaultKey
         run: "terraform init ${{ inputs.terraform_args }} \\\n 
           -backend-config=\"resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}\" \\\n
           -backend-config=\"storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}\" \\\n
@@ -130,7 +130,7 @@ jobs:
 
       - name: Terraform Init with custom key
         if: ${{ !inputs.default_storage_key }}
-        id: init
+        id: initCustomKey
         run: "terraform init ${{ inputs.terraform_args }} \\\n 
           -backend-config=\"resource_group_name=${{ secrets.AZURE_BACKEND_RESOURCE_GROUP_NAME }}\" \\\n
           -backend-config=\"storage_account_name=${{ secrets.AZURE_BACKEND_STORAGE_ACCOUNT_NAME }}\" \\\n
