--- a/.github/workflows/azure-plan-and-destroy.yaml
+++ b/.github/workflows/azure-plan-and-destroy.yaml
@@ -7,6 +7,10 @@ on:
         required: false
         type: string
         default: ""
+      default_storage_key:
+        required: false
+        type: boolean
+        default: true
       terraform_args:
         required: false
         type: string
